# ManCo

./: .gitignore  .gitlab-ci.yml  .gitsubprojects  CMakeLists.txt  LICENSE.txt  README.md
CMake/: Findlibzmq.cmake
csb1/: CMakeLists.txt  ZeqManager.cpp  ZeqManager.hpp
csb1_zeq/: CMakeLists.txt  ZeqManager.cpp  ZeqManager.hpp
examples/: CMakeLists.txt  consumer.cpp  producer.cpp
manco/: CMakeLists.txt  Definitions.hpp  Enums.hpp  ZeqManager.cpp  ZeqManager.h  ZeqManager.hpp
